export spinner type.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-spinner",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Simple Spinner for the Terminal.",
   "main": "index.js",
   "scripts": {
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/wemakeweb/node-spinner/issues"
   },
-  "homepage": "https://github.com/wemakeweb/node-spinner"
+  "homepage": "https://github.com/wemakeweb/node-spinner",
+  "dependencies": {
+    "util-extend": "~1.0.1"
+  },
+  "devDependencies": {}
 }
